scss/_regions/_container.scss
// Container
//
// Standard container for centered 12-column layouts. Collapses to full-width on mobile.
// Modifier classes can be applied to the required `container__block` to use different
// preset layouts. Optionally, the `container__row` class can be used to align into rows.
//
// Apply `.-padded` modifier to add extra bottom padding to a container, or `.-dark` to
// use a dark purple background which blends seamlessly with the header.
//
// .-narrow - Three-quarters width container.
// .-half   - Half-width container, can be placed side-by-side to create two-column layouts.
//
// Markup:
//   <div class="container">
//     <div class="wrapper">
//       <div class="container__block {{modifier_class}}">
//         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse dapibus
//         condimentum aliquet. Maecenas suscipit commodo dui, eu venenatis nisl volutpat.</p>
//       </div>
//       <div class="container__block {{modifier_class}}">
//         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse dapibus
//         condimentum aliquet. Maecenas suscipit commodo dui, eu venenatis nisl volutpat.</p>
//       </div>
//     </div>
//   </div>
//
// Styleguide Container

.container {
  @include clearfix;
  clear: both;

  &.-padded {
    padding-bottom: $base-spacing * 2.5;
  }

  &.-dark {
    background: $purple;
    color: #fff;
  }

  > .wrapper {
    position: relative;
    float: left;

    @include media($tablet) {
      @include span(12 no-gutters);
      @include push(2);
    }

    .container__block {
      // When inside a container wrapper, increase top/bottom padding
      // on the container body.
      padding: 0 gutters();
      margin: $base-spacing 0;
      line-height: $comfortable-line-height;

      &.-narrow {
        @include media($tablet) {
          @include span(9 of 12);
        }
      }

      &.-half {
        line-height: $unitless-line-height; // reset to "base" line height for smaller columns

        @include media($tablet) {
          @include span(6 of 12);
        }
      }
    }
  }

  // Use container rows to separate rows in columned layouts.
  .container__row {
    @include clearfix;
    margin: $base-spacing 0;

    > .container__block {
      margin: 0;
    }
  }

  // Use container body for all container content, with optional modifiers
  // to span either half or three-quarters width.
  .container__block {
    @include clearfix;
    padding: gutters();
  }
}

